welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:34: error: not found: value c
		slash(c==Color.red, v==Color.blue)
                      ^PatternPicture:34: error: not found: value v
		slash(c==Color.red, v==Color.blue)
                                    ^PatternPicture:42: error: not enough arguments for method slash: (c: java.awt.Color, v: java.awt.Color)Unit.
Unspecified value parameter v.
		slash(Color.yellow)
                     ^